<resources>
    <string name="app_name">MyTuition</string>

    <string name="title_home">Home</string>
    <string name="title_train">Treinar</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_main">Main Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Logar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">LOGAR</string>
    <string name="action_register">CADASTRAR</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="action_retrieve_password">Esqueci a senha</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to home fragment -->
    <string name="home_hero_attack">Ataque: </string>
    <string name="home_hero_defense">Defesa: </string>

    <!-- String to Register Activity -->
    <string name="action_create_account">Criar conta</string>
    <string name="action_cancel">cancelar</string>
    <string name="prompt_conf_password">Repetir senha</string>
    <string name="prompt_complete_name">Nome completo</string>
    <string name="prompt_hero_name">Nome do heroi</string>
    <string name="prompt_ra">R.A.</string>
    <string name="prompt_birthday">Data de nascimento</string>
    <string name="prompt_gender">Sexo</string>
    <string name="prompt_male">Masculino</string>
    <string name="prompt_female">Feminino</string>


    <!-- Luta Fim Dialog Strings -->
    <string name="prompt_win_fight">VOCÊ VENCEU!</string>
    <string name="prompt_lose_fight">VOCÊ PERDEU!</string>


    <!-- Luta Sair Dialog -->
    <string name="prompt_exit_confirm">Tem certeza que deseja sair da luta?</string>

    <string name="prompt_congratulations">PARABÉNS!</string>

    <string name="title_activity_jgggy">jgggy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_luta">LutaActivity</string>

    <string name="descricao_heroi_imagem">Imagem do herói escolhido</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_entrada">Data de entrada na faculdade</string>
    <string name="prompt_nao">Não</string>
    <string name="prompt_sim">Sim</string>
    <string name="prompt_work">Trabalha na área de TI?</string>
    <string name="prompt_curso">Escolha o seu curso atual</string>
    <string name="selecionar_curso">Selecione o seu curso</string>
    <string name="action_change_password">Alterar a senha</string>
    <string name="prompt_conf_nova_senha">Repetir nova senha</string>
    <string name="prompt_senha_atual">Senha atual</string>
    <string name="prompt_nova_senha">Nova senha</string>
    <string name="action_alterar_senha">ALTERAR SENHA</string>

</resources>
