<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.felipemacedo.mytuition.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etCadNomeCompleto"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_complete_name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadCpf"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_cpf"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadNomeHeroi"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_hero_name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadRA"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_ra"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadEntrada"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_entrada"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1" />

            <Spinner
                android:id="@+id/sprCurso"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable" />

            <EditText
                android:id="@+id/etCadCurso"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_entrada"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadNascimento"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_birthday"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="268.00dp"
                android:layout_height="112dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14.67dp"
                    android:text="@string/prompt_work"
                    android:textSize="18.33sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rBtnCadTrabalha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_sim"
                        android:textColor="#8C8E8E"
                        android:textSize="18.33sp" />

                    <RadioButton
                        android:id="@+id/rBtnCadNaoTrabalha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nao"
                        android:textColor="#8C8E8E"
                        android:textSize="18.33sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="268.00dp"
                android:layout_height="112dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14.67dp"
                    android:text="@string/prompt_gender"
                    android:textSize="18.33sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rBtnCadMasculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_male"
                        android:textColor="#8C8E8E"
                        android:textSize="18.33sp" />

                    <RadioButton
                        android:id="@+id/rBtnCadFeminino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_female"
                        android:textColor="#8C8E8E"
                        android:textSize="18.33sp" />
                </RadioGroup>
            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/etCadEmail"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadPassword"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCadPasswordConfirm"
                android:layout_width="268.00dp"
                android:layout_height="37.33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="@drawable/textview_drawable"
                android:hint="@string/prompt_conf_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="137.33dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="23dp"
                android:background="@drawable/button_login_finish"
                android:text="@string/action_register"
                android:textColor="#fff"
                android:textSize="18.33dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="132dp"
                android:layout_height="36.67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_cancel_exit"
                android:text="@string/action_cancel"
                android:textColor="#fff"
                android:textSize="20sp"
                tools:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
